--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
     "emailjs-com": "^3.1.0",
     "react": "^17.0.2",
     "react-awesome-modal": "^2.0.5",
+    "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.9.0",
     "react-hot-toast": "^2.0.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.2",
+    "react-slick": "^0.28.1",
+    "reactstrap": "^9.0.1",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
